--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Maisalin_movies">
+        <service
+            android:name=".MusicService"
+            android:enabled="true"
+            android:exported="true"></service>
+        <service
+            android:name=".NotificationIntentService"
+            android:exported="false" />
+
         <activity
             android:name=".ArrayListActivity"
             android:exported="true" />
