--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Maisalin_movies">
         <activity
-            android:name=".MainActivity2"
+            android:name=".FirstActivity"
             android:exported="true">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
@@ -18,6 +18,9 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
         </activity>
+        <activity
+            android:name=".MainActivity2"
+            android:exported="true" />
         <activity
             android:name=".Intro"
             android:exported="true" />
@@ -44,14 +47,14 @@
             android:exported="true" />
         <activity
             android:name=".LoginPage"
-            android:exported="true"></activity>
+            android:exported="true">
+        </activity>
         <activity
             android:name=".SignupPage"
             android:exported="true" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true" />
 
         <receiver
             android:name=".NotificationReceiver"
